# hdc-scene-composer-guidance

./: .gitignore  README.md  agent.py  canvas.py  config.py  guidance_system.py  hdc_utils.py  lexicon.py  main.py  pyproject.toml  requirements.txt  scene_encoder.py  scene_parser.py
